# cphasing-rs

./: .gitignore  CHANGE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  du.stat  pixi.toml  recipe.yaml  test.so.order
.cargo/: config.toml
.github/workflows/: release.yml
src/: aligner.rs  alleles.rs  bam.rs  bed.rs  cli.rs  clm.rs  contacts.rs  cool.rs  core.rs  count_re.rs  cutsite.rs  fastx.rs  kprune.rs  lib.rs  main.rs  methalign.rs  methy.rs  mnd.rs  mod.rs  optimize.rs  order.rs  orientation.rs  paf.rs  paf2.rs  pairs.rs  pixels.rs  porec.rs  pqs.rs  prune.rs  realign.rs  scaffolding.rs  simulation.rs  sketch.rs  splitcontacts.rs
src/prune/: Cargo.toml
src/prune/src/: lib.rs  main.rs
src/prune/tests/: Chr01.allele.table  Chr01.counts_AAGCTT.4g1.txt  Chr01.counts_AAGCTT.4g2.txt  Chr01.counts_AAGCTT.4g3.txt  Chr01.counts_AAGCTT.4g4.txt  Chr01.counts_AAGCTT.partition.table  Chr01.counts_AAGCTT.txt
test/: Chr1.so.ordered.list  dot.plot.py  du.stat  hcr.bed  hprc.chr20.100k.fasta  hprc.chr20.100k.fasta.fai  hprc.chr20.100k.modify.fasta  hprc.chr20.100k.modify.fasta.fai  hprc.output.hifi.call_mods.modbam.pbmm2.freq.aggregate.all.bed  kmer.list  methy-minimap2.hprc.bam  out.slide  output.hifi.call_mods.modbam.bam  ploidy-2.2.100k.allele.table  ploidy-2.3.n500k.allele.table  prune.contig.table  so.order  test.alignment.summary  test.clm  test.concatemer.summary  test.contacts  test.contigsizes  test.fa  test.fq  test.hcr.bed  test.hcr.pairs  test.kmer.count  test.kmer.position.bed  test.masked.fa  test.modify.fasta  test.out.csv  test.paf  test.pairs  test.pairs.prune  test.pairs2contacts.contacts  test.read.summary  test.secondary.bam  test.secondary.realign.bam  test.so.order  test.so.score.txt  (+2 more)
tests/: aligner_tests.rs  alleles_tests.rs  bam_tests.rs  concorde_tests.rs  contacts_tests.rs  core_tests.rs  count_re_tests.rs  fastx_tests.rs  hcr_tests.rs  kprune_tests.rs  methalign_tests.rs  paf_tests.rs  pairs_tests.rs  parallel_tests.rs  petgraph_tests.rs  pixels_tests.rs  porec_tests.rs  pqs_tests.rs  prune_tests.rs  realign_tests.rs  scaffolding_tests.rs  simulation_tests.rs  sketch_tests.rs
