[package]
name = "cphasing"
version = "0.0.16"
edition = "2021"

[[bin]]
name = "cphasing-rs"
path = "src/main.rs"

[profile.dev]
opt-level = 1
overflow-checks = false


[dependencies]

# minimap2 = { path = "../minimap2-rs", features = ["default"]}
# async-compression = "0.4.18"
arrow = { version = "54.0" }
anyhow = "1.0.70"
aho-corasick = { version = "1.1.3" }
bio = { version = "1.5.0" }
block-aligner = { version = "0.5.0", features = ["simd_avx2"] }
bytecount = "0.6.2"
clap = { version = "4.4.10" }
chrono = { version = "0.4.24" }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
csv = { version = "1.1.6" }
concorde_rs = "0.1.1"
# dashmap = { version = "5.5.3", features = ["serde"] }
flate2 = {version = "1.0.28", default-features = false}
gzp = { version = "0.11.3"}
hashbrown = { version = "0.14.3", features=[ "rayon" ]}
lazy_static = { version = "1.4.0" }
log = { version = "0.4.17" }
# indicatif = { version = "0.17.8", }
jemallocator = { version = "0.5.4 " }
ndarray = { version = "0.15.6" }
no-panic = { version = "0.1" }
noodles = { version = "0.57.0", features = ["core", "fasta", "bed", "vcf"]}
nthash = { version = "0.5.1" }
env_logger = { version = "0.10.0" }
itertools = { version = "0.10.5"}
indexmap = { version = "2.1.0" }
ordered-float = { version = "4.0", default-features = false }
scan_fmt = { version = "0.2.6" }
pathfinding = { version = "4.3.2" }
parquet = { version = "54.0" }
# parquet2 = { version = "0.17.0" }
polars = { version = "0.39.0", features = [ "csv", "parquet", "lazy", "dtype-full",] }
petgraph = { version = "0.6" }
rand = { version = "0.8.5"}
rayon = { version = "1.8.0" }
rdxsort = { version = "0.3.0" }
# rdst = { version = "0.20.14" }
regex = { version = "1.9" }
rust-lapper = { version = "1.1.0"}
rust-htslib = { version = "0.44.1", default-features = false }
# rust-seq2kminmers = { version = "0.1.0" }
serde = { version = "1.0", features = ["derive"]}
statrs = "0.17.1"
seq_io = { version = "0.4.0-alpha.0" }
smallvec = { version = "1.13.2" }
# string-interner = { version = "0.17" }
tempfile = { version = "3.8.0" }
twox-hash = { version = "1.6.2" }
# tokio = { version = "1", features = ["full"] }
walkdir = "2.3.2"

[profile.release]
opt-level = 'z'
lto = true

